--- a/src/views/HomeView.html
+++ b/src/views/HomeView.html
@@ -1,8 +1,11 @@
 <div id="HomeView">
 
+    <div class="noise"></div>
+    <div class="overlay"></div>
+
     <link rel="stylesheet" href="../css/HomeView.css">
 
-    <h1 class="p-5 text-center">Page d'acceuil !</h1>
+    <h1 class="p-5 text-center">Bienvenue !</h1>
  
         <div class="row px-5 justify-content-center">
 
@@ -63,4 +66,4 @@
 
         </div>
 
-</div>
+    </div>
