--- a/css/ProductView.css
+++ b/css/ProductView.css
@@ -1,14 +1,3 @@
-.card{
-    background-color: rgba(172, 172, 172, 0.652);
-}
-.card p{
-    color: white;
-    height: 20vh;
-}
-.card:hover{
-    cursor: pointer;
-}
-
 @import 'https://fonts.googleapis.com/css?family=Inconsolata';
 
 html {
@@ -83,3 +72,21 @@ body {
     0%        { background-position: 0 -100vh; }
     35%, 100% { background-position: 0 100vh; }
   }
+
+
+.card{
+    background-color: rgba(172, 172, 172, 0.652);
+}
+.card p{
+    color: white;
+    height: 100%;
+}
+
+.card-img-top {
+    width: 20vw;
+    height: 20vw;
+    object-fit: cover;
+}
+a:hover{
+    cursor: pointer;
+}
