category view/controler add

--- a/src/views/CategoryView.html
+++ b/src/views/CategoryView.html
@@ -1,8 +1,11 @@
+<div id="CategoryDetailView">
 
+    <link rel="stylesheet" href="../css/CategoryView.css">
 
-<div id="CategoryView">
-    
-    
-  
+    <h1>Vous êtes sur la catégorie : ${this.theme.title}</h1>
 
-</div>
+    <p>
+
+    </p>
+
+  </div>
