--- a/src/views/ProductView.html
+++ b/src/views/ProductView.html
@@ -3,7 +3,7 @@
     <link rel="stylesheet" href="../css/ProductView.css">
 
     <div class="container pt-5">
-        <div class="card text-center" style="width: 100%%;">
+        <div class="card text-center" style="width: 100%;">
             <div class="card-body">
                 <h5 class="card-title">
                     <span class="badge bg-dark">Voici l'article numéro : ${this.product.id} (${this.theme.title}) </span>
