--- a/css/CategoryView.css
+++ b/css/CategoryView.css
@@ -72,3 +72,27 @@ body {
     0%        { background-position: 0 -100vh; }
     35%, 100% { background-position: 0 100vh; }
   }
+
+
+
+.row{
+    padding-left: 1.5%;
+}
+
+.card{
+    background-color: rgba(172, 172, 172, 0.652);
+
+}
+.card:hover{
+    cursor: pointer;
+}
+
+h1{
+    text-align: center;
+    padding: 4%;
+}
+
+
+.img:hover {
+    transform: scale(1.5); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
+  }
