--- a/css/CategoryView.css
+++ b/css/CategoryView.css
@@ -89,10 +89,10 @@ body {
 
 h1{
     text-align: center;
-    padding: 4%;
+    padding: 2%;
 }
 
 
-.img:hover {
-    transform: scale(1.5); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
+.card:hover {
+    transform: scale(1.1); 
   }
