--- a/css/HomeView.css
+++ b/css/HomeView.css
@@ -17,7 +17,7 @@ html {
 
 body {
   box-sizing: border-box;
-  height: 100%;
+  /* height: 100%; */
   background-color: #000000;
   background-image: radial-gradient(#11581E, #041607), url("https://media.giphy.com/media/oEI9uBYSzLpBK/giphy.gif");
   background-repeat: no-repeat;
